--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "espices-app",
+  "name": "pluckspices-core-app",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start:dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "moment": "^2.27.0",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   },
   "engines": {
     "npm": "6.14.5",
