--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mysql": "^2.18.1"
   },
