--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pluckspices-core-app",
+  "name": "auction-experio-core-app",
   "version": "1.0.0",
   "main": "app.js",
   "license": "MIT",
@@ -15,13 +15,9 @@
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
-    "mysql": "^2.18.1"
+    "mongoose": "^5.9.28"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  },
-  "engines": {
-    "npm": "6.14.5",
-    "node": "12.13.0"
   }
 }
